--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".SchoolAddress">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,10 +19,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <service android:name=".ServicePhp" />
         <service
             android:name=".IntentServiceDb"
-            android:exported="false"></service>
+            android:exported="false" />
+
+        <activity android:name="com.harik.cesamaster.MyIpAddress"></activity>
     </application>
 
 </manifest>
